# Notebooks

./: .coverage  .gitignore  .pre-commit-config.yaml  CYPHER_QUERIES_README.md  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  DEMO_README.md  DEMO_README_MAIN.md  Dockerfile.arx  Dockerfile.d  EDA.ipynb  IMPLEMENTATION_SUMMARY.md  MODELING_COMMAND_SPEC.md  MULTI_AGENT_DEMO_README.md  Makefile  NEO4J_INTEGRATION_README.md  NSL_KNOWLEDGE_MANAGEMENT_PLAN.md  NSL_KNOWLEDGE_MANAGEMENT_PRD.md  NSL_KNOWLEDGE_MANAGEMENT_SPEC.md  PLAN.md  PLAN_v2.md  PRD.md  PRD_v2.md  README.md  RESTRUCTURING_SUMMARY.md  check_neo4j_data.py  demo_config.py  demo_presentation.py  explore_graphiti_structure.py  generate_dda_documents.py  live_api_demo.py  multi_agent_dda_demo.py  neo4j_config.env  neo4j_cypher_queries.md  pyproject.toml  run_all_queries.py  run_neo4j_queries.py  setup.py  setup_neo4j_demo.py
.github/workflows/: ci.yml
backups/modeling/: customer_analytics_20250721_001448.json  customer_analytics_20250721_001552.json  phase_4_demo_20250721_002903.json
docs/: ARCHITECTURE.md  MODELING_COMMAND_GUIDE.md
domain/: repositories.py
examples/: ankylosing_spondylitis_management_dda.md  autoimmune_disease_biobank_dda.md  autoimmune_disease_clinical_trials_dda.md  autoimmune_disease_dda.md  autoimmune_disease_telemedicine_dda.md  celiac_disease_management_dda.md  crohns_disease_dda.md  ibd_template_dda.md  inflammatory_bowel_disease_research_dda.md  lupus_management_dda.md  multiple_sclerosis_management_dda.md  pediatric_autoimmune_disease_management_dda.md  psoriasis_management_dda.md  rheumatoid_arthritis_management_dda.md  sample_dda.md  sjögren's_syndrome_management_dda.md  test_domain_dda.md  type_1_diabetes_management_dda.md  ulcerative_colitis_management_dda.md  vasculitis_management_dda.md
infrastructure/: memory_graph.py
interfaces/: cli.py
metadata_requirements/: metadata_requirements_plan.md  metadata_requirements_prd.md  metadata_requirements_spec.md
multi_agent_system/: __main__.py
specs/: MODELING_COMMAND_PLAN.md  MODELING_COMMAND_PRD.md  PHASE_4_COMPLETION_SUMMARY.md  PLAN.md  PRD.md
specs/improvements/: JINJA2_TEMPLATE_NOTE.md  PYTEST_CROSS_CHECK_RESULTS.md
src/: composition_root.py
src/application/: agent_runner.py  agents.py  event_bus.py  falkor_backend.py  graphiti_backend.py  in_memory_backend.py  kg_api.py  knowledge_management.py  knowledge_manager.py  mcp_client.py  test_api.py  test_event_bus.py  test_in_memory_backend.py  test_knowledge_manager.py
src/application/agents/: echo_agent.py
src/application/commands/: __init__.py  agent_commands.py  base.py  collaboration_commands.py  echo_command.py  file_commands.py  knowledge_commands.py  knowledge_handlers.py  modeling_command.py  modeling_handler.py  shell_commands.py
src/application/services/: markitdown_wrapper.py  (+1 more)
src/domain/: agent.py  agent_definition.py  command_bus.py  commands.py  communication.py  dda_models.py  event.py  graph.py  kg_backends.py  knowledge_manager.py  roles.py  tool_definition.py
src/infrastructure/: communication.py  falkor_backend.py  graphiti.py  graphiti_backend.py  in_memory_backend.py  llm_graph_transformer.py  mcp_client.py  memory_graph.py  neo4j_backend.py  neo4j_graph.py
src/interfaces/: cli.py  kg_api.py  kg_operations_api.py
src/multi_agent_system/: __init__.py  __main__.py
src/multi_agent_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_api.py  test_cli.py  test_event_bus.py  test_in_memory_backend.py  test_kg_operations_api.py  test_knowledge_manager.py  test_knowledge_manager_agent.py  test_memory_graph.py  test_neo4j_connection.py  test_neo4j_graph.py  test_rabbitmq_event_bus.py
tests/application/: test_agents.py  test_command_bus.py  test_file_commands.py  test_knowledge_manager_agent.py  test_markitdown_wrapper.py  test_modeling_command.py  test_modeling_command_basic.py  test_shell_commands.py  test_tool_service.py
tests/domain/: test_graph.py
tests/infrastructure/: test_a2a_channel.py  test_communication.py  test_llm_transformer.py  test_memory_repository.py
tests/integration/: test_modeling_integration.py
tests/interfaces/: test_agent_servers.py
tests/performance/: test_modeling_performance.py
(+40 files in other folders)
