[project]
name = "multi_agent_system"
version = "0.1.0"
description = "Multi-agent system powered by LLMGraphTransformer"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "llm-graph-transformer",
]

[project.optional-dependencies]
develop = [
    "ruff",
    "black",
    "pre-commit",
    "pytest",
]
[project.scripts]
multi-agent-system = "multi_agent_system.__main__:main"


[tool.black]
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
